<?php

namespace App\Service\Payment;

class PaypalPaymentProcessor extends AbstractPaymentProcessor
{
    
}