<?php

namespace App\Service\Payment;

class StripePaymentProcessor extends AbstractPaymentProcessor
{
    
}